[package]
name = "lag"
version = "0.1.0"
authors = ["Marcus Ball <marcus.ball@live.com>"]

[dependencies]
mio = "0.5.0"
bytes = "0.3.0"
byteorder = "0.3"
num = "0.1.31"
enum_primitive = "0.1.0"

[[bin]]
name = "lag-server"
path = "src/server/main.rs"

[lib]
name = "lag_client"
path = "src/client/lib.rs"
